@@ -1,6 +1,7 @@
 * Apr 3 2001 hship
 
 Add @since tags to new methods in AbtractEngine.
+[413428] DateField should allow format to be specified
 
 * Mar 19 2001 hship
 
